%% Mermaid ERD Diagram
%% Run with a Mermaid-compatible renderer

erDiagram
    EMPLOYEE ||--o{ TICKET : "creates / updates"
    EMPLOYEE ||--o{ AUDIT_LOG : "actor"
    DEPARTMENT ||--o{ EMPLOYEE : "has"
    DEPARTMENT ||--o{ TICKET : "owns"
    TICKET ||--o{ TICKET_FORWARD : "forwarded to"
    TICKET ||--o{ ATTACHMENT : "has"
    TICKET ||--o{ NOTIFICATION : "triggers"
    TICKET ||--o{ TICKET_HISTORY : "versioned by"
    EMPLOYEE ||--o{ NOTIFICATION : "receives"

    EMPLOYEE {
        string id
        string username
        string password_hash
        string role
        string department_id
        datetime created_at
        datetime last_login_at
        boolean is_active
    }

    DEPARTMENT {
        string id
        string name
        string code
        boolean is_active
        datetime created_at
    }

    TICKET {
        string id
        string department_id
        string citizen_name
        string citizen_national_id
        string type
        string status
        datetime created_at
        datetime updated_at
        datetime answered_at
        datetime closed_at
        string created_by_employee_id
        string last_updated_by_employee_id
        boolean archived
    }

    TICKET_FORWARD {
        string id
        string ticket_id
        string from_department_id
        string to_department_id
        datetime forwarded_at
        string reason
    }

    ATTACHMENT {
        string id
        string ticket_id
        string filename
        string mime_type
        int size_bytes
        boolean encrypted
        datetime uploaded_at
        string uploaded_by_employee_id
    }

    NOTIFICATION {
        string id
        string ticket_id
        string employee_id
        string type
        boolean read
        datetime created_at
    }

    TICKET_HISTORY {
        string id
        string ticket_id
        string action
        string old_status
        string new_status
        string diff_summary
        string actor_employee_id
        datetime occurred_at
    }

    AUDIT_LOG {
        string id
        string actor_employee_id
        string action
        string entity
        string entity_id
        json before
        json after
        string ip
        string user_agent
        datetime created_at
        string hash_chain_prev
        string hash_chain_curr
    }
